Fix text-overflow in questions table

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -62,3 +62,8 @@
   }
 }
 
+.question-box {
+  max-height: 100px;
+  overflow-y: auto;
+}
+
